[package]
name = "libutp-rs2-sys"
version = "0.1.1"
edition = "2021"
description = "Rust bindings for libutp"
license = "MIT"
documentation = "https://docs.rs/libutp-rs2-sys"
repository = "https://github.com/ikatson/libutp-rs2"
readme = "README.md"

[dependencies]
libc = "0.2.169"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.13"
