[package]
name = "libutp-rs2"
version = "0.1.2"
edition = "2021"
description = "Rust bindings for libutp"
license = "MIT"
documentation = "https://docs.rs/libutp-rs2"
repository = "https://github.com/ikatson/libutp-rs2"
readme = "README.md"

[dependencies]
anyhow = "1.0.95"
bstr = "1.11.3"
futures = "0.3.31"
lazy_static = "1.5.0"
libutp-rs2-sys = { version = "0.1.0", path = "../libutp-rs2-sys" }
os_socketaddr = "0.2.5"
parking_lot = "0.12.3"
ringbuf = "0.4.7"
tokio = { version = "1.43.0", features = [
    "net",
    "macros",
    "rt",
    "sync",
    "time",
] }
tracing = "0.1.41"
socket2 = "0.5"

[dev-dependencies]
anyhow = "1.0.95"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.43.0", features = [
    "net",
    "macros",
    "rt-multi-thread",
    "time",
    "io-util",
] }
rand = "0.9.0"
